syntax = "proto3";
package sess;

service LogService {
  rpc logActivity(Activity) returns (LogResult);
  rpc fetchActivites(SessionInfo) returns(stream Activity);
}


message SessionInfo {
  string userId = 1;
  string sessionId = 2;
}

message  ActivityInfo {
  string activityDesc = 1;
  string time = 2;
}

message Activity {
  string userId = 1;
  string sessionId = 2;
  string activityDesc = 3;
  string time = 4;
}

message LogResult {
  bool logged = 1;
}

